2005-10-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/Object.cs: remove the fast path. It was causing troubles with
	MD.

2005-10-19  Mike Kestner  <mkestner@novell.com>

	* gnome/PrintContext.custom (SetFont): pass the font by handle, not
	ref.

2005-10-19  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version for 2.6.0.
	* bootstrap-2.4 : bump version for 2.4.0.

2005-10-08  Miguel de Icaza  <miguel@novell.com>

	* gtk/Application.cs (Invoke): Use Timeout instead of Idle add to
	trigger the event on the Gtk thread.

2005-10-09  Mike Kestner  <mkestner@novell.com>

	* Makefile.include : reference Mono.Cairo.dll.
	* gdk/Gdk.metadata : add cairo_t symbol element.

2005-10-09  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : string quote the POLICY_VERSIONS.
	* Makefile.include : multiple policy fixes.
	* */Makefile.am : multiple policy fixes.

2005-10-08  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : handle enum return values GTypes.
	* gtk/TextBuffer.custom : mark Text prop !GTK_SHARP_2_8.
	[Fixes #75885]

2005-10-08  Ben Maurer  <bmaurer@ximian.com>

	* glade/XML.custom: Do not look at inherited custom
	attrs. Increases performance.

	* glib/SignalAttribute.cs: Add AttributeUsage attr to increase
	perf and compiler checking

2005-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/MainContext.cs: added a Depth property to p/invoke g_main_depth.
	* glib/Object.cs:
	(Dispose): immediately call g_object_unref without queueing when
	possible (MainContext.Depth > 0) and use Timeout.Add instead of Idle.Add
	to get our unref callback scheduled more reliably.

2005-10-05  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version for beta3.
	* bootstrap-2.4 : bump version for beta3.

2005-09-27  Mike Kestner  <mkestner@novell.com>

	* glib/Opaque.cs : remove the Opaques hash.  As f-spot demonstrated,
	we cannot rely on a pointer continuing to point at the same type in