@@ -1802,5 +1802,83 @@
         <since version="Gtk# 2.6" />
       </Docs>
     </Member>
+    <Member MemberName="InsertWithTags">
+      <MemberSignature Language="C#" Value="public void InsertWithTags (Gtk.TextIter iter, string text, Gtk.TextTag[] tags);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="iter" Type="Gtk.TextIter" />
+        <Parameter Name="text" Type="System.String" />
+        <Parameter Name="tags" Type="Gtk.TextTag[]">
+          <Attributes>
+            <Attribute>
+              <AttributeName>System.ParamArray</AttributeName>
+            </Attribute>
+          </Attributes>
+        </Parameter>
+      </Parameters>
+      <Docs>
+        <param name="iter">To be added.</param>
+        <param name="text">To be added.</param>
+        <param name="tags">To be added.</param>
+        <summary>Inserts text with tag information.</summary>
+        <remarks>The overload is obsolete, replace by the ref TextIter overload.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Insert">
+      <MemberSignature Language="C#" Value="public void Insert (Gtk.TextIter iter, string text);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="iter" Type="Gtk.TextIter" />
+        <Parameter Name="text" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <param name="iter">To be added.</param>
+        <param name="text">To be added.</param>
+        <summary>Inserts text.</summary>
+        <remarks>The overload is obsolete, replace by the ref TextIter overload.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="InsertRange">
+      <MemberSignature Language="C#" Value="public void InsertRange (Gtk.TextIter iter, Gtk.TextIter start, Gtk.TextIter end);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="iter" Type="Gtk.TextIter" />
+        <Parameter Name="start" Type="Gtk.TextIter" />
+        <Parameter Name="end" Type="Gtk.TextIter" />
+      </Parameters>
+      <Docs>
+        <param name="iter">To be added.</param>
+        <param name="start">To be added.</param>
+        <param name="end">To be added.</param>
+        <summary>Inserts a range of text.</summary>
+        <remarks>This overload is obsolete, replaced by ref TextIter overloads since the iters passed in are updated by the caller.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Delete">
+      <MemberSignature Language="C#" Value="public void Delete (Gtk.TextIter start, Gtk.TextIter end);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="start" Type="Gtk.TextIter" />
+        <Parameter Name="end" Type="Gtk.TextIter" />
+      </Parameters>
+      <Docs>
+        <param name="start">To be added.</param>
+        <param name="end">To be added.</param>
+        <summary>Delete text between two iterators.</summary>
+        <remarks>This overload is obsolete, replaced by ref TextIter overloads since the iters passed in are updated by the caller.</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
