@@ -1,3 +1,8 @@
+2005-10-19  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/TextBuffer.custom : add some obsolete overloads for backward
+	compat with some not-completely-unusable 1.0.x methods.
+
 2005-10-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* glib/Object.cs: remove the fast path. It was causing troubles with
